objects/Bread_Winner__Xero_Metadata__c.object
<CustomObject>
    <fields>
        <fullName>Bread_Winner__Account_Code__c</fullName>
        <label>Account Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Number_Code__c</fullName>
        <label>Number Code</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Xero_Org_ID__c</fullName>
        <label>Xero Org ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Xero Metadata</label>
    <listViews>
        <fullName>Bread_Winner__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Xero Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>